--- a/ATH/Areas/Admin/Views/_AdminLayout.cshtml
+++ b/ATH/Areas/Admin/Views/_AdminLayout.cshtml
@@ -1,18 +1,125 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Admin Panel</title>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    @Styles.Render("~/Content/adminlte/bower_components/bootstrap/dist/css/bootstrap.min.css")
+    @Styles.Render("~/Content/adminlte/bower_components/font-awesome/css/font-awesome.min.css")
+    @Styles.Render("~/Content/adminlte/bower_components/Ionicons/css/ionicons.min.css")
+    @Styles.Render("~/Content/adminlte/dist/css/AdminLTE.min.css")
+    @Styles.Render("~/Content/adminlte/dist/css/skins/_all-skins.min.css")
+    @Styles.Render("~/Content/adminlte/bower_components/morris.js/morris.css")
+    @Styles.Render("~/Content/adminlte/bower_components/jvectormap/jquery-jvectormap.css")
+    @Styles.Render("~/Content/adminlte/bower_components/bootstrap-daterangepicker/daterangepicker.css")
+    @Styles.Render("~/Content/adminlte/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css")
 </head>
-<body>
-
-    <h1>Admin Header</h1>
-
-    <div>
-        @RenderBody()
+<body class="hold-transition skin-blue sidebar-mini">
+    <div class="wrapper">
+        <header class="main-header">
+            <a href="javascript:void(0);" class="logo">
+                <span class="logo-mini"><b>A</b>TH</span>
+                <span class="logo-lg"><b>Admin</b>&nbsp;ATH</span>
+            </a>
+            <nav class="navbar navbar-static-top">
+                <a href="javascript:void();" class="sidebar-toggle" data-toggle="push-menu" role="button">
+                    <span class="sr-only">Toggle navigation</span>
+                </a>
+                <div class="navbar-custom-menu">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown user user-menu">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <span class="hidden-xs">DevOps</span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="user-header">
+                                    <p>
+                                        DevOps
+                                        <small>Member since Nov. @DateTime.Now.Year</small>
+                                    </p>
+                                </li>
+                                <li class="user-footer">
+                                    <div class="pull-left">
+                                        <a href="javascript:void(0);" class="btn btn-default btn-flat">Profile</a>
+                                    </div>
+                                    <div class="pull-right">
+                                        <a href="javascript:void(0);" class="btn btn-default btn-flat">Sign out</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <aside class="main-sidebar">
+            <section class="sidebar">
+                <ul class="sidebar-menu" data-widget="tree">
+                    <li class="header">MAIN NAVIGATION</li>
+                    <li class="active treeview">
+                        <a href="#">
+                            <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                            <li><a href="#"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-th"></i> <span>Widgets</span>
+                            <span class="pull-right-container">
+                                <small class="label pull-right bg-green">new</small>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </aside>
+        <div class="content-wrapper">
+            <section class="content-header">
+                <h1>
+                    Dashboard
+                    <small>Control panel</small>
+                </h1>
+                <ol class="breadcrumb">
+                    <li><a href="javascript:void();"><i class="fa fa-dashboard"></i> Home</a></li>
+                    <li class="active">Dashboard</li>
+                </ol>
+            </section>
+            <section class="content">
+                @RenderBody()
+            </section>
+        </div>
+        <footer class="main-footer">
+            <div class="pull-right hidden-xs">
+                <b>Version</b> 1.0
+            </div>
+            <strong>Copyright &copy; @DateTime.Now.Year <a href="javascript:void(0);">ATH</a>.</strong> All rights reserved.
+        </footer>
     </div>
 
-    <h1>Admin Footer</h1>
+    @Scripts.Render("~/Content/adminlte/bower_components/jquery/dist/jquery.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/jquery-ui/jquery-ui.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/bootstrap/dist/js/bootstrap.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/raphael/raphael.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/morris.js/morris.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js")
+    @Scripts.Render("~/Content/adminlte/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js")
+    @Scripts.Render("~/Content/adminlte/plugins/jvectormap/jquery-jvectormap-world-mill-en.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/jquery-knob/dist/jquery.knob.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/moment/min/moment.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/bootstrap-daterangepicker/daterangepicker.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js")
+    @Scripts.Render("~/Content/adminlte/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/jquery-slimscroll/jquery.slimscroll.min.js")
+    @Scripts.Render("~/Content/adminlte/bower_components/fastclick/lib/fastclick.js")
+    @Scripts.Render("~/Content/adminlte/dist/js/adminlte.min.js")
 
+    @RenderSection("scripts", required: false)
 </body>
 </html>
