--- a/ATH/Views/Shared/_Layout.cshtml
+++ b/ATH/Views/Shared/_Layout.cshtml
@@ -1,44 +1,218 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>ATH - Home</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    @Styles.Render("~/Content/medicio/assets/img/favicon.png")
+    @Styles.Render("~/Content/medicio/assets/img/apple-touch-icon.png")
+
+    <!-- Vendor CSS Files -->
+    @Styles.Render("~/Content/medicio/assets/vendor/bootstrap/css/bootstrap.min.css")
+    @Styles.Render("~/Content/medicio/assets/vendor/icofont/icofont.min.css")
+    @Styles.Render("~/Content/medicio/assets/vendor/boxicons/css/boxicons.min.css")
+    @Styles.Render("~/Content/medicio/assets/vendor/animate.css/animate.min.css")
+    @Styles.Render("~/Content/medicio/assets/vendor/owl.carousel/assets/owl.carousel.min.css")
+    @Styles.Render("~/Content/medicio/assets/vendor/venobox/venobox.css")
+    @Styles.Render("~/Content/medicio/assets/vendor/aos/aos.css")
+
+    <!-- Template Main CSS File -->
+    @Styles.Render("~/Content/medicio/assets/css/style.css")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+    <!-- ======= Top Bar ======= -->
+    <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
+        <div class="container d-flex align-items-center justify-content-between">
+            <div class="d-flex align-items-center">
+                <i class="icofont-clock-time"></i> Monday - Saturday, 8AM to 10PM
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+            <div class="d-flex align-items-center">
+                <i class="icofont-phone"></i> Call us now +1 5589 55488 55
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    <header id="header" class="fixed-top">
+        <div class="container d-flex align-items-center">
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+            <a href="javascript:void(0);" class="logo mr-auto">
+                
+                
+                <img src="@Href("~/Content/medicio/assets/img/logo.png")" alt="">
+            </a>
+
+            <nav class="nav-menu d-none d-lg-block">
+                <ul>
+                    <li class="active">
+                        <a href="javascript:void(0);">Home</a>
+                    </li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#departments">Departments</a></li>
+                    <li><a href="#doctors">Doctors</a></li>
+                    <li class="drop-down"><a href="javascript:void(0);">Drop Down</a>
+                      <ul>
+                        <li><a href="javascript:void(0);">Drop Down 1</a></li>
+                        <li class="drop-down"><a href="javascript:void(0);">Deep Drop Down</a>
+                          <ul>
+                            <li><a href="javascript:void(0);">Deep Drop Down 1</a></li>
+                            <li><a href="javascript:void(0);">Deep Drop Down 2</a></li>
+                            <li><a href="javascript:void(0);">Deep Drop Down 3</a></li>
+                            <li><a href="javascript:void(0);">Deep Drop Down 4</a></li>
+                            <li><a href="javascript:void(0);">Deep Drop Down 5</a></li>
+                          </ul>
+                        </li>
+                        <li><a href="javascript:void(0);">Drop Down 2</a></li>
+                        <li><a href="javascript:void(0);">Drop Down 3</a></li>
+                        <li><a href="javascript:void(0);">Drop Down 4</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#contact">Contact</a></li>
+
+                </ul>
+            </nav><!-- .nav-menu -->
+            <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span> Appointment</a>
+        </div>
+    </header>
+    <section id="hero">
+        <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+            <div class="carousel-inner" role="listbox">
+
+                <!-- Slide 1 -->
+                <div class="carousel-item active" style="background-image: url(../../Content/medicio/assets/img/slide/slide-1.jpg)">
+                    <div class="container">
+                        <h2>Welcome to <span>Medicio</span></h2>
+                        <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
+                        <a href="#about" class="btn-get-started scrollto">Read More</a>
+                    </div>
+                </div>
+
+                <!-- Slide 2 -->
+                <div class="carousel-item" style="background-image: url(../../Content/medicio/assets/img/slide/slide-2.jpg)">
+                    <div class="container">
+                        <h2>Lorem Ipsum Dolor</h2>
+                        <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
+                        <a href="#about" class="btn-get-started scrollto">Read More</a>
+                    </div>
+                </div>
+
+                <!-- Slide 3 -->
+                <div class="carousel-item" style="background-image: url(../../Content/medicio/assets/img/slide/slide-3.jpg)">
+                    <div class="container">
+                        <h2>Sequi ea ut et est quaerat</h2>
+                        <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
+                        <a href="#about" class="btn-get-started scrollto">Read More</a>
+                    </div>
+                </div>
+
+            </div>
+
+            <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon icofont-simple-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+
+            <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon icofont-simple-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+
+        </div>
+    </section>
+    <main id="main">
+        @RenderBody()
+    </main>
+    <footer id="footer">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-info">
+                            <h3>Medicio</h3>
+                            <p>
+                                A108 Adam Street <br>
+                                NY 535022, USA<br><br>
+                                <strong>Phone:</strong> +1 5589 55488 55<br>
+                                <strong>Email:</strong> info@example.com<br>
+                            </p>
+                            <div class="social-links mt-3">
+                                <a href="javascript:void(0);" class="twitter"><i class="bx bxl-twitter"></i></a>
+                                <a href="javascript:void(0);" class="facebook"><i class="bx bxl-facebook"></i></a>
+                                <a href="javascript:void(0);" class="instagram"><i class="bx bxl-instagram"></i></a>
+                                <a href="javascript:void(0);" class="google-plus"><i class="bx bxl-skype"></i></a>
+                                <a href="javascript:void(0);" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-md-6 footer-links">
+                        <h4>Useful Links</h4>
+                        <ul>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Home</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">About us</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Services</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Terms of service</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Privacy policy</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Our Services</h4>
+                        <ul>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Web Design</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Web Development</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Product Management</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Marketing</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="javascript:void(0);">Graphic Design</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 footer-newsletter">
+                        <h4>Our Newsletter</h4>
+                        <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                        <form action="javascript:void(0);" method="post">
+                            <input type="email" name="email">
+                            <input type="submit" value="Subscribe">
+                        </form>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="copyright">
+                &copy; Copyright <strong><span>Medicio</span></strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+                Designed by <a href="javascript:void(0);">Syed Nazir Hussain</a>
+            </div>
+        </div>
+    </footer>
+    <div id="preloader"></div>
+    <a href=href="javascript:void(0);" class="back-to-top"><i class="icofont-simple-up"></i></a>
+    <!-- Vendor JS Files -->
+    @Scripts.Render("~/Content/medicio/assets/vendor/jquery/jquery.min.js")
+    @Scripts.Render("~/Content/medicio/assets/vendor/bootstrap/js/bootstrap.bundle.min.js")
+    @Scripts.Render("~/Content/medicio/assets/vendor/jquery.easing/jquery.easing.min.js")
+    @Scripts.Render("~/Content/medicio/assets/vendor/php-email-form/validate.js")
+    @Scripts.Render("~/Content/medicio/assets/vendor/waypoints/jquery.waypoints.min.js")
+    @Scripts.Render("~/Content/medicio/assets/vendor/counterup/counterup.min.js")
+    @Scripts.Render("~/Content/medicio/assets/vendor/owl.carousel/owl.carousel.min.js")
+    @Scripts.Render("~/Content/medicio/assets/vendor/venobox/venobox.min.js")
+    @Scripts.Render("~/Content/medicio/assets/vendor/aos/aos.js")
+
+    <!-- Template Main JS File -->
+    @Scripts.Render("~/Content/medicio/assets/js/main.js")
 </body>
+
 </html>
