--- a/ATH/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ATH/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model ATH.Models.ExternalLoginConfirmationViewModel
+﻿@model ATH.ViewModel.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
