--- a/ATH/Views/Account/ForgotPassword.cshtml
+++ b/ATH/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ATH.Models.ForgotPasswordViewModel
+﻿@model ATH.ViewModel.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
