--- a/ATH/Views/Account/ResetPassword.cshtml
+++ b/ATH/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ATH.Models.ResetPasswordViewModel
+﻿@model ATH.ViewModel.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
