--- a/ATH/Views/Manage/AddPhoneNumber.cshtml
+++ b/ATH/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ATH.Models.AddPhoneNumberViewModel
+﻿@model ATH.ViewModel.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
