--- a/ATH/Views/Manage/ChangePassword.cshtml
+++ b/ATH/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ATH.Models.ChangePasswordViewModel
+﻿@model ATH.ViewModel.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
