--- a/ATH/Views/Manage/ManageLogins.cshtml
+++ b/ATH/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model ATH.Models.ManageLoginsViewModel
+﻿@model ATH.ViewModel.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
