--- a/ATH/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/ATH/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ATH.Models.VerifyPhoneNumberViewModel
+﻿@model ATH.ViewModel.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
