--- a/ATH/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ATH/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ATH.Models.ExternalLoginListViewModel
+﻿@model ATH.ViewModel.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
