--- a/ATH/Views/Shared/_Layout.cshtml
+++ b/ATH/Views/Shared/_Layout.cshtml
@@ -38,48 +38,7 @@
             </div>
         </div>
     </div>
-    <header id="header" class="fixed-top">
-        <div class="container d-flex align-items-center">
-
-            <a href="javascript:void(0);" class="logo mr-auto">
-                
-                
-                <img src="@Href("~/Content/medicio/assets/img/logo.png")" alt="">
-            </a>
-
-            <nav class="nav-menu d-none d-lg-block">
-                <ul>
-                    <li class="active">
-                        <a href="javascript:void(0);">Home</a>
-                    </li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#departments">Departments</a></li>
-                    <li><a href="#doctors">Doctors</a></li>
-                    <li class="drop-down"><a href="javascript:void(0);">Drop Down</a>
-                      <ul>
-                        <li><a href="javascript:void(0);">Drop Down 1</a></li>
-                        <li class="drop-down"><a href="javascript:void(0);">Deep Drop Down</a>
-                          <ul>
-                            <li><a href="javascript:void(0);">Deep Drop Down 1</a></li>
-                            <li><a href="javascript:void(0);">Deep Drop Down 2</a></li>
-                            <li><a href="javascript:void(0);">Deep Drop Down 3</a></li>
-                            <li><a href="javascript:void(0);">Deep Drop Down 4</a></li>
-                            <li><a href="javascript:void(0);">Deep Drop Down 5</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="javascript:void(0);">Drop Down 2</a></li>
-                        <li><a href="javascript:void(0);">Drop Down 3</a></li>
-                        <li><a href="javascript:void(0);">Drop Down 4</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#contact">Contact</a></li>
-
-                </ul>
-            </nav><!-- .nav-menu -->
-            <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span> Appointment</a>
-        </div>
-    </header>
+    @Html.Partial("_Navbar")
     <section id="hero">
         <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
@@ -199,7 +158,7 @@
         </div>
     </footer>
     <div id="preloader"></div>
-    <a href=href="javascript:void(0);" class="back-to-top"><i class="icofont-simple-up"></i></a>
+    <a href= href="javascript:void(0);" class="back-to-top"><i class="icofont-simple-up"></i></a>
     <!-- Vendor JS Files -->
     @Scripts.Render("~/Content/medicio/assets/vendor/jquery/jquery.min.js")
     @Scripts.Render("~/Content/medicio/assets/vendor/bootstrap/js/bootstrap.bundle.min.js")
@@ -213,6 +172,8 @@
 
     <!-- Template Main JS File -->
     @Scripts.Render("~/Content/medicio/assets/js/main.js")
+
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
