--- a/ATH/Views/Account/Login.cshtml
+++ b/ATH/Views/Account/Login.cshtml
@@ -14,10 +14,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "php-email-form", role = "form" }))
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "new-email-form", role = "form" }))
                 {
                     @Html.AntiForgeryToken()
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "Error(s)", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Your Email" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
