--- a/ATH/Areas/Admin/Views/Login/Index.cshtml
+++ b/ATH/Areas/Admin/Views/Login/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model ATH.ViewModel.LoginViewModel
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -20,21 +22,32 @@
         </div>
         <div class="login-box-body">
             <p class="login-box-msg">Sign in to start your session</p>
-            <form action="javascript:void(0);" method="post">
+
+
+            @using (Html.BeginForm("Login", "Login", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+
                 <div class="form-group has-feedback">
-                    <input type="email" class="form-control" placeholder="Email">
+                    @Html.TextBoxFor(x => x.Email, new { @class = "form-control", placeholder = "Email" })
                     <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
-                    <input type="password" class="form-control" placeholder="Password">
+                    @Html.PasswordFor(x => x.Password, new { @class = "form-control", placeholder = "Password" })
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-8">
+                        <div class="checkbox icheck">
+                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe)
+                        </div>
+                    </div>
+                    <div class="col-xs-4">
                         <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
                     </div>
                 </div>
-            </form>
+            }
         </div>
     </div>
 
