--- a/ATH/Areas/Admin/Views/Login/Index.cshtml
+++ b/ATH/Areas/Admin/Views/Login/Index.cshtml
@@ -21,20 +21,30 @@
             <a href="javascript:void(0);"><b>Admin</b>&nbsp;ATH</a>
         </div>
         <div class="login-box-body">
-            <p class="login-box-msg">Sign in to start your session</p>
-
 
             @using (Html.BeginForm("Login", "Login", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
 
+                if(TempData["Message"] != null)
+                {
+                    <div class="alert alert-danger">
+                        <span>@TempData["Message"]</span>
+                    </div>
+                }
+
+
+                @Html.ValidationSummary(true, "Error(s)", new { @class = "text-danger" })
+
                 <div class="form-group has-feedback">
                     @Html.TextBoxFor(x => x.Email, new { @class = "form-control", placeholder = "Email" })
                     <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group has-feedback">
                     @Html.PasswordFor(x => x.Password, new { @class = "form-control", placeholder = "Password" })
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                 </div>
                 <div class="row">
                     <div class="col-xs-8">
