--- a/ATH/Areas/Admin/Views/_AdminLayout.cshtml
+++ b/ATH/Areas/Admin/Views/_AdminLayout.cshtml
@@ -35,7 +35,7 @@
                             <ul class="dropdown-menu">
                                 <li class="user-header">
                                     <p>
-                                        DevOps
+                                        @User.Identity.Name
                                         <small>Member since Nov. @DateTime.Now.Year</small>
                                     </p>
                                 </li>
@@ -43,9 +43,16 @@
                                     <div class="pull-left">
                                         <a href="javascript:void(0);" class="btn btn-default btn-flat">Profile</a>
                                     </div>
-                                    <div class="pull-right">
-                                        <a href="javascript:void(0);" class="btn btn-default btn-flat">Sign out</a>
-                                    </div>
+                                    @if (Request.IsAuthenticated && User.IsInRole("Admin"))
+                                    {
+                                        using (Html.BeginForm("Logout", "Login", FormMethod.Post, new { id = "logoutForm" }))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <div class="pull-right">
+                                                <a href="javascript:document.getElementById('logoutForm').submit()" class="btn btn-default btn-flat">Sign out</a>
+                                            </div>
+                                        }
+                                    }
                                 </li>
                             </ul>
                         </li>
@@ -58,7 +65,7 @@
                 <ul class="sidebar-menu" data-widget="tree">
                     <li class="header">MAIN NAVIGATION</li>
                     <li class="active treeview">
-                        <a href="#">
+                        <a href="javascript:void(0);">
                             <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
@@ -70,7 +77,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="javascript:void(0);">
                             <i class="fa fa-th"></i> <span>Widgets</span>
                             <span class="pull-right-container">
                                 <small class="label pull-right bg-green">new</small>
