--- a/ATH/Views/Account/Login.cshtml
+++ b/ATH/Views/Account/Login.cshtml
@@ -38,7 +38,7 @@
 
 @section Scripts {
 
-    @Scripts.Render("~/bundles/jqueryval")
+    @*@Scripts.Render("~/bundles/jqueryval")*@
 
     <script type="text/javascript">
 
