--- a/ATH/Areas/Admin/Views/_AdminLayout.cshtml
+++ b/ATH/Areas/Admin/Views/_AdminLayout.cshtml
@@ -29,7 +29,7 @@
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
                         <li class="dropdown user user-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
                                 <span class="hidden-xs">DevOps</span>
                             </a>
                             <ul class="dropdown-menu">
@@ -60,6 +60,7 @@
                 </div>
             </nav>
         </header>
+
         <aside class="main-sidebar">
             <section class="sidebar">
                 <ul class="sidebar-menu" data-widget="tree">
@@ -72,8 +73,12 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                            <li><a href="#"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                            <li class="active">
+                                <a href="@Url.Action("Index", "Dashboard")"><i class="fa fa-circle-o"></i> Dashboard</a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("TestEmail", "Dashboard")"><i class="fa fa-circle-o"></i>Check Email</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -87,6 +92,7 @@
                 </ul>
             </section>
         </aside>
+        
         <div class="content-wrapper">
             <section class="content-header">
                 <h1>
